fixtures/core/schema/rejected/local-ref-missing-alpha-name.fields
# Local references must carry alpha-stable normalized names.
expect reject
shape local-ref
field id
field type
